--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul class="menu-horizontal">
           <li>
-            <button class="boton" onclick="location.href='Index.html'">
+            <button class="boton" onclick="location.href='index.html'">
               <img src="Imagenes/index/smart-home.png" width="50" />
             </button>
           </li>
