--- a/Paginas Internas/Juegos.html
+++ b/Paginas Internas/Juegos.html
@@ -15,7 +15,7 @@
         <nav>
           <ul class="menu-horizontal">
             <li>
-              <button class="boton" onclick="location.href='../Index.html'"><img src="../Imagenes/index/smart-home.png" width="50"></button>
+              <button class="boton" onclick="location.href='../index.html'"><img src="../Imagenes/index/smart-home.png" width="50"></button>
             </li>
             <li>
               <a href="../Paginas Internas/SobreMi.html">Sobre mí</a>
