--- a/Paginas Internas/estudios.html
+++ b/Paginas Internas/estudios.html
@@ -119,7 +119,7 @@
         </tr>
       </table>
       <div class="slider-box" align="center" cellspacing="50">
-        <h3 align="center">Algunas fotos de certificados y diplomas</h3>
+        <h3 align="center">Algunas fotos con amigos</h3>
         <ul>
             <li>
                 <img src="../Imagenes/Estudios/amigos1.jfif" alt="">
